<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.PreOrderFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:layout_gravity="center"
            android:text="Antes de começar, certifique-se que o sistema está rodando no computador e que você está conectado no Wi-Fi!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/cliente"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nenhum_cliente"
            android:textColor="#ff0000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnSelectCustomer"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/transparent"
                android:onClick="buttonClick"
                android:src="@drawable/select_selector" />

            <ImageButton
                android:id="@+id/btnAddCustomer"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:onClick="buttonClick"
                android:src="@drawable/adicionar_selector" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/placa"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editLetPlate"
                android:layout_width="60dp"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="3"
                android:selectAllOnFocus="true"
                android:textColor="#494949" />

            <EditText
                android:id="@+id/editNumPlate"
                android:enabled="false"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="4"
                android:selectAllOnFocus="true"
                android:textColor="#494949" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/marca"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editBrand"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapCharacters"
            android:singleLine="true"
            android:textColor="#494949" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/modelo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editModel"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapCharacters"
            android:singleLine="true"
            android:textColor="#494949" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:background="@android:color/transparent"
                android:onClick="buttonClick"
                android:src="@drawable/cancelar_selector" />

            <ImageButton
                android:id="@+id/btnConcluir"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:onClick="buttonClick"
                android:src="@drawable/concluir_selector" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>